Fixed random horizontal scroll problem
(in users modal when selecting a tweet)

--- a/snowflake classic black.css
+++ b/snowflake classic black.css
@@ -463,4 +463,8 @@
     .spinner-button-icon-spinner {
        background-image: url('http://i.imgur.com/8HC6epP.gif') 
     }
+    /* Should fix random horizontal scrollbar on users modal when selecting a tweet */
+    .js-column-social-proof.column-detail-level-2.column-panel {
+       display: none;        
+    }
 }
